--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #EEE8E2;
+  width: 100%;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* fonts */
+
+.f-PowerGrotesk {
+  font-family: "PowerGrotesk";
+}
+
+.f-HelveticaNeue {
+  font-family: "HelveticaNeue";
+}
+
+.f-PPNeueBit {
+  font-family: "PPNeueBit";
+}
+
+.f-BelgianoSerif {
+  font-family: "BelgianoSerif";
+}
+
+@font-face {
+  font-family: "HelveticaNeue";
+  src: url("/public/font/HelveticaNeue.ttc") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "PPNeueBit";
+  src: url("/public/font/PPNeueBit-Bold.otf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "BelgianoSerif";
+  src: url("/public/font/Belgiano\ Serif\ 2.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "PowerGrotesk";
+  src: url("/Public/font/PowerGrotesk-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
 }
